<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_host"
    style="@style/MyAppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/text_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_connect"
        android:layout_gravity="center"
        android:visibility="gone"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:orientation="horizontal"
            android:verticalScrollbarPosition="right" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:id="@+id/tab_africa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_africa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_Africa"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp"
                   />

                <ImageView
                    android:id="@+id/image_africa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    app:srcCompat="@drawable/africa" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_americas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_americas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_Americas"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp"
                    />
                <ImageView
                    android:id="@+id/image_americas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/americas" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_asia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity=""
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_asia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_Asia"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp"
                    />

                <ImageView
                    android:id="@+id/image_asia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/asia" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_europe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_europe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_Europe"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp"
                    />

                <ImageView
                    android:id="@+id/image_europe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/europe" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_oceania"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_oceania"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_Oceania"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:textSize="25sp"
                    />

                <ImageView
                    android:id="@+id/image_oceania"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/oceania" />
            </RelativeLayout>

        </FrameLayout>
    </LinearLayout>
</TabHost>
